# python-template

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rtx.toml  404.html  LICENSE  Makefile  README.md  cookiecutter.json  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject_pip.toml  sitemap.xml
.devcontainer/: docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python/: action.yaml
.github/workflows/: cookiecutter_test.yml  doc.yaml  doc_deploy.yaml  doc_deploy.yml  doc_test.yaml  doc_test.yml  docker_push.yaml  docs.yaml  lint.yaml  test.yaml
.github/workflows/actions/setup-project/: action.yml
docker/: Dockerfile  docker-entrypoint.sh
docs/: index.md  poetry.md
docs/tutorials/: docker.md  ide-settings.md  makefile.md  uv.md
explanation/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
how-to-guides/: index.html
poetry/: index.html
python_template/: __init__.py
reference/: index.html
search/: search_index.json
src/python_template/: __init__.py  placeholder.py
src/python_template/loggers/: filters.py  setup.py
src/python_template/loggers/configs/: default.py
src/python_template/scripts/: placeholder.py
stylesheets/: custom.css
tests/: __init__.py  test_cookiecutter.py  test_placeholder.py
tutorials/: index.html
tutorials/docker/: index.html
tutorials/ide-settings/: index.html
tutorials/makefile/: index.html
tutorials/uv/: index.html
{{cookiecutter.project_name}}/: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_name}}/.github/: copilot-instructions.md
{{cookiecutter.project_name}}/.github/prompts/: 1.prompt.md
{{cookiecutter.project_name}}/.github/workflows/: doc.yaml  doc_deploy.yml  doc_test.yml  docker_push.yaml  lint.yaml  lint.yml  package.yml  setup_repo.yaml  test.yaml  test.yml
{{cookiecutter.project_name}}/docker/: entrypoint.sh
{{cookiecutter.project_name}}/docs/: index.md  reference.md
{{cookiecutter.project_name}}/docs/templates/: google-notypes.mustache  google.mustache  numpy-notypes.mustache  numpy.mustache  tutorial.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  placeholder.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/loggers/: __init__.py  filters.py  formatters.py  setup.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/loggers/configs/: __init__.py  advanced.py  default.py  uvicorn.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/scripts/: placeholder.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/utils/: general.py
{{cookiecutter.project_name}}/tests/: test_placeholder.py
